# sim_frontend

./: .codecov.yml  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  TESTING.md  TEST_SUMMARY.md  app.py  app_ws.py  compose.yaml  config.toml  package-lock.json  package.json  pyproject.toml  run_app.sh  run_tests.sh  vitest.config.js
.github/: BRANCH_PROTECTION.md  dependabot.yml  pull_request_template.md
.github/workflows/: auto-approve.yml  ci.yml  dependency-review.yml  dependency-review.yml.disabled  release.yml
docs/: scenario_analysis_guide.md  websocket_protocol.md
scripts/: 01_database_init_complete.sql  02_seed_data_complete.sql  03_database_migration.sql
src/app/: config.py  context.py  logging.py  main.py  middleware.py
src/app/auth/: __init__.py  admin.py  auth.py  dependencies.py  email_service.py  jwt_utils.py  middleware.py  password.py  router.py  schemas.py
src/app/core/: asset_router.py  frontend_router.py  health_router.py  router.py  scenario_router.py  scenario_schema.py  scenario_websocket_schema.py  schema.py  semantic_router.py
src/app/data/: lookup_asset.json
src/app/middleware/: __init__.py  https_redirect.py  request_analyzer.py  request_timer.py  response_analyzer.py  usage_logger.py  usage_tracker.py
src/app/models/: __init__.py  api_key.py  audit.py  database.py  organisation.py  organization.py  password_reset.py  role.py  session.py  tracking.py  user.py
src/app/ratings/: __init__.py  router.py  schemas.py
src/app/services/: __init__.py  asset_service.py  auth_service.py  config_service.py  email_service.py  http_client.py  message_formatter.py  parallel_agent_caller.py  query_cache.py  recommendation_generator.py  scenario_analyzer.py  scenario_error_handler.py  (+2 more)
streamlit/: app.py  app_sse.py  app_ws.py
tests/: ask-agent.test.js  asset-search.test.js  auth-api-original.test.js  auth-api.test.js  conftest.py  form-validation.test.js  lookup-service.test.js  scenario-auth-ui.test.js  scenario-basic.test.js  scenario-candidate-ui.test.js  setup.js  setup.test.js  sql-service-basic.test.js  test_auth.py  test_auth_with_db_mocking.py  test_config.py  test_core_endpoints.py  test_database_isolation.py  test_email_service.py  test_error_handlers.py  test_input_validation.py  test_jwt_utils.py  test_lookup_service.py  test_message_formatter.py  test_parallel_agent_caller.py  test_query_cache.py  test_ratings_with_db_mocking.py  test_recommendation_generator.py  test_request_analyzer.py  test_request_timer.py  test_scenario.js  test_scenario_analyzer.py  test_scenario_auth.py  test_scenario_candidate_format.py  test_scenario_error_handler.py  test_scenario_integration.py  test_scenario_retry.py  test_scenario_ui_auth.py  test_scenario_validation.py  test_session_management.py  (+5 more)
tests/helpers/: load-script.js  mock-ask-agent.js
tests/js/: html-sanitizer.test.js  scenario-grouping.test.js  scenario-ui-renderer.test.js  scenario-websocket-simple.test.js
(+53 files in other folders)
