[project]
name = "sim-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.2",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.24.0",
    "websockets>=15.0.1",
]
